// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hierarchicalMenu() render calls ReactDOM.render 1`] = `
<HeaderFooter-AutoHide
  canToggleShowMore={false}
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-hierarchical-menu--item__active",
      "body": "ais-hierarchical-menu--body",
      "count": "ais-hierarchical-menu--count",
      "depth": "ais-hierarchical-menu--list__lvl",
      "footer": "ais-hierarchical-menu--footer",
      "header": "ais-hierarchical-menu--header",
      "item": "ais-hierarchical-menu--item",
      "link": "ais-hierarchical-menu--link",
      "list": "ais-hierarchical-menu--list",
      "root": "ais-hierarchical-menu",
    }
  }
  facetValues={
    Array [
      Object {
        "label": "foo",
        "value": undefined,
      },
      Object {
        "label": "bar",
        "value": undefined,
      },
    ]
  }
  isShowingMore={false}
  shouldAutoHideContainer={false}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\">{{label}} <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "show-more-active": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show less</button>",
        "show-more-inactive": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show more</button>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "show-more-active": false,
        "show-more-inactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;

exports[`hierarchicalMenu() render has a templates option 1`] = `
<HeaderFooter-AutoHide
  canToggleShowMore={false}
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-hierarchical-menu--item__active",
      "body": "ais-hierarchical-menu--body",
      "count": "ais-hierarchical-menu--count",
      "depth": "ais-hierarchical-menu--list__lvl",
      "footer": "ais-hierarchical-menu--footer",
      "header": "ais-hierarchical-menu--header",
      "item": "ais-hierarchical-menu--item",
      "link": "ais-hierarchical-menu--link",
      "list": "ais-hierarchical-menu--list",
      "root": "ais-hierarchical-menu",
    }
  }
  facetValues={
    Array [
      Object {
        "label": "foo",
        "value": undefined,
      },
      Object {
        "label": "bar",
        "value": undefined,
      },
    ]
  }
  isShowingMore={false}
  shouldAutoHideContainer={false}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "footer2",
        "header": "header2",
        "item": "item2",
        "show-more-active": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show less</button>",
        "show-more-inactive": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show more</button>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": true,
        "header": true,
        "item": true,
        "show-more-active": false,
        "show-more-inactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;

exports[`hierarchicalMenu() render has a transformItems options 1`] = `
<HeaderFooter-AutoHide
  canToggleShowMore={false}
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-hierarchical-menu--item__active",
      "body": "ais-hierarchical-menu--body",
      "count": "ais-hierarchical-menu--count",
      "depth": "ais-hierarchical-menu--list__lvl",
      "footer": "ais-hierarchical-menu--footer",
      "header": "ais-hierarchical-menu--header",
      "item": "ais-hierarchical-menu--item",
      "link": "ais-hierarchical-menu--link",
      "list": "ais-hierarchical-menu--list",
      "root": "ais-hierarchical-menu",
    }
  }
  facetValues={
    Array [
      Object {
        "label": "foo",
        "transformed": true,
        "value": undefined,
      },
      Object {
        "label": "bar",
        "transformed": true,
        "value": undefined,
      },
    ]
  }
  isShowingMore={false}
  shouldAutoHideContainer={false}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\">{{label}} <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "show-more-active": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show less</button>",
        "show-more-inactive": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show more</button>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "show-more-active": false,
        "show-more-inactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;

exports[`hierarchicalMenu() render sets facetValues to empty array when no results 1`] = `
<HeaderFooter-AutoHide
  canToggleShowMore={false}
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-hierarchical-menu--item__active",
      "body": "ais-hierarchical-menu--body",
      "count": "ais-hierarchical-menu--count",
      "depth": "ais-hierarchical-menu--list__lvl",
      "footer": "ais-hierarchical-menu--footer",
      "header": "ais-hierarchical-menu--header",
      "item": "ais-hierarchical-menu--item",
      "link": "ais-hierarchical-menu--link",
      "list": "ais-hierarchical-menu--list",
      "root": "ais-hierarchical-menu",
    }
  }
  facetValues={Array []}
  isShowingMore={false}
  shouldAutoHideContainer={true}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\">{{label}} <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "show-more-active": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show less</button>",
        "show-more-inactive": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show more</button>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "show-more-active": false,
        "show-more-inactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;

exports[`hierarchicalMenu() render sets shouldAutoHideContainer to true when no results 1`] = `
<HeaderFooter-AutoHide
  canToggleShowMore={false}
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-hierarchical-menu--item__active",
      "body": "ais-hierarchical-menu--body",
      "count": "ais-hierarchical-menu--count",
      "depth": "ais-hierarchical-menu--list__lvl",
      "footer": "ais-hierarchical-menu--footer",
      "header": "ais-hierarchical-menu--header",
      "item": "ais-hierarchical-menu--item",
      "link": "ais-hierarchical-menu--link",
      "list": "ais-hierarchical-menu--list",
      "root": "ais-hierarchical-menu",
    }
  }
  facetValues={Array []}
  isShowingMore={false}
  shouldAutoHideContainer={true}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\">{{label}} <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "show-more-active": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show less</button>",
        "show-more-inactive": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show more</button>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "show-more-active": false,
        "show-more-inactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;

exports[`hierarchicalMenu() render understand provided cssClasses 1`] = `
<HeaderFooter-AutoHide
  canToggleShowMore={false}
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-hierarchical-menu--item__active active",
      "body": "ais-hierarchical-menu--body body",
      "count": "ais-hierarchical-menu--count count",
      "depth": "ais-hierarchical-menu--list__lvl",
      "footer": "ais-hierarchical-menu--footer footer",
      "header": "ais-hierarchical-menu--header header",
      "item": "ais-hierarchical-menu--item item",
      "link": "ais-hierarchical-menu--link link",
      "list": "ais-hierarchical-menu--list list",
      "root": "ais-hierarchical-menu root cx",
    }
  }
  facetValues={
    Array [
      Object {
        "label": "foo",
        "value": undefined,
      },
      Object {
        "label": "bar",
        "value": undefined,
      },
    ]
  }
  isShowingMore={false}
  shouldAutoHideContainer={false}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\">{{label}} <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "show-more-active": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show less</button>",
        "show-more-inactive": "<button class=\\"ais-HierarchicalMenu-showMore\\">Show more</button>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "show-more-active": false,
        "show-more-inactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;
